# try-partialord

./: Cargo.toml  README.md
src/: binary_search.rs  from_std_quicksort.rs  lib.rs  min_max.rs
src/sort/: from_std_quicksort.rs  mod.rs  std_mergesort.rs
