[package]
name = "try-partialord"
version = "0.1.0"
authors = ["aobatact <aobatact144@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [] #["std"]
std = []

[dependencies]

[dev-dependencies]
rand = "0.7.3"